[build-system]
requires = ["build", "setuptools-scm"]

[project]
dynamic = ["version"]
name = "iam_units"
description = "Unit definitions for integrated-assessment research"
authors = [{ name = "IAM-units contributors" }]
maintainers = [
  { name = "Paul Natsuo Kishimoto", email = "mail@paul.kishimoto.name" },
]
license = { file = "LICENSE" }
readme = "README.rst"
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = ["pint >= 0.11"]

[project.urls]
homepage = "https://github.com/IAMconsortium/units"

[project.optional-dependencies]
update = ["globalwarmingpotentials"]
tests = ["numpy", "pandas", "pytest", "pytest-cov"]

[tool.ruff]
select = ["C9", "E", "F", "I", "W"]

[tool.ruff.mccabe]
max-complexity = 7

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
