[metadata]
name = iam_units
author = IAM-units authors
author_email = mail@paul.kishimoto.name
license = GPLv3
description = Unit definitions for integrated-assessment research
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/IAMconsortium/units

[options]
packages = iam_units
include_package_data = True
install_requires =
    pint >= 0.11
    setuptools >= 41
setup_requires =
    setuptools >= 41
    setuptools_scm

[options.package_data]
iam_units =
    data/*
