[metadata]
name = iam_units
author = IAM-units authors
author_email = mail@paul.kishimoto.name
license = GPLv3
description = Unit definitions for integrated-assessment research
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/IAMconsortium/units
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = iam_units
include_package_data = True
install_requires =
    pint >= 0.11
    setuptools >= 41
setup_requires =
    setuptools >= 41
    setuptools_scm

[options.extras_require]
update =
    globalwarmingpotentials

[flake8]
max-line-length = 88

[isort]
profile = black

[mypy]
# Empty section required as of mypy 0.800;
# see https://github.com/python/mypy/issues/9940

[mypy-pandas.*]
ignore_missing_imports = True
[mypy-pint.*]
ignore_missing_imports = True
[mypy-setuptools.*]
ignore_missing_imports = True
